# otk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml  quality.yml
otk/: discovery.py  interactive.py  main.py  reference_guide.py  templating.py
otk/commands/: add.py  add_xml.py  extend.py  lint.py
otk/templates/action/: window_action.xml.j2
otk/templates/menu/: menuitem.xml.j2
otk/templates/model/: abstract_model.py.j2  ir.model.access.csv.j2  model.py.j2  model.py.jinja  transient_model.py.j2
otk/templates/module/: __manifest__.py.j2
otk/templates/view/: form_view.xml.j2  inherited_view.xml.j2  kanban_view.xml.j2  list_view.xml.j2  search_view.xml.j2  views.xml.j2  xpath_field.xml.j2
